@@ -10,6 +10,7 @@ general:
 	- allow '*' in hostnames
 	- add support alternative way of specifying database connection
           (DB_{DSN,USER,PASS})
+	- method for cleaning up ever-growing history/lastlog tables
 
 import:
 	- real parser for both imports
@@ -31,6 +32,7 @@ sauron.cgi:
           default settings	
 	- module support for easily extending user interface
 	- allow "<none>" to befault for HINFO selections
+	- "download CSV" returns only first 100 results
 
 browser.cgi:
 	- optional user authentication support
@@ -40,7 +42,7 @@ browser.cgi:
 
 next database format (1.2):
 	- hosts: change ether_key to server wide (instead of just zone)
-	- settings: change field name key --> settings_key
+
 
 
 
